--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,119 +13,195 @@
     <link rel="stylesheet" href="public/css/style.css">
     <title>Projet 3</title>
 </head>
+
 <body>
     <header>
         <a class="retour" href="index.html"><i class="fas fa-arrow-left"></i></a>
         <div id="header__logo"></div>
     </header>
     <section>
-            <div id="imageRestaurant3"></div>
-            <div class="menu">
-                <div class="menu__top">
-                    <div class="menu__top__titre">À la française</div>
-                    <div class="menu__top__image"><div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div></div>
+        <div id="imageRestaurant3"></div>
+        <div class="menu">
+            <div class="menu__top">
+                <div class="menu__top__titre">
+                    <h2>À la française</h2>
                 </div>
-                <div class="menu__card"> 
-                    <div class="menu__card__titre"><p>Entrées</p></div>
-                    <div id="card-1" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Tartare de poulpe acidulé</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Aux zestes d'orange</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>25€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-2" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Velouté de légumes d'antan</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Carotte, panais, topinambour</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-3" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Soupe à l'oignon</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Revisitée</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>20€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                <div class="menu__top__image">
+                    <div class="restaurant__card__description__logo">
+                        <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                        <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
                     </div>
                 </div>
-                <div  class="menu__card"> 
-                    <div class="menu__card__titre"><p>Plats</p></div>
-                    <div id="card-4" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Coquilles Saint-Jacques</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Accompagnées d'une purée de panais</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>40€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-5" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Magret de canard</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et parmentier de pommes de terre</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-6" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Pigeonneau d’Ille-et-Vilaine</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Sur son lit de gnocchis aux légumes</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>44€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                </div>
-                <div  class="menu__card"> 
-                    <div class="menu__card__titre"><p>Desserts</p></div>
-                    <div id="card-7" class="menu__card__plat">
-                        <div  class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Pétales de violettes glacés</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et purée de noisettes</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>18€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-8" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Fondant au chocolat</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Revisité</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>22€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-9" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Millefeuille croustillant</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Myrtilles et pâte d’amande</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>23€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    
-                </div>
-                <div class="menu__bottom">
-                    <button class="menu__bottom__bouton"><p>Commander</p></button>
-                </div>
-                
             </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Entrées</p>
+                </div>
+                <div id="card-1" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Tartare de poulpe acidulé</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>25€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-2" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Velouté de légumes d'antan</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-3" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Soupe à l'oignon</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Revisitée</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>20€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Plats</p>
+                </div>
+                <div id="card-4" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Coquilles Saint-Jacques</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-5" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Magret de canard</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-6" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Pigeonneau d’Ille-et-Vilaine</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>44€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Desserts</p>
+                </div>
+                <div id="card-7" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Pétales de violettes glacés</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et purée de noisettes</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>18€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-8" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Fondant au chocolat</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Revisité</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>22€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-9" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Millefeuille croustillant</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>23€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+
+            </div>
+            <div class="menu__bottom">
+                <button class="menu__bottom__bouton">Commander</button>
+            </div>
+
+        </div>
     </section>
     <footer>
         <div class="footer">
             <div class="footer__logo"></div>
             <div class="footer__texte">
                 <div class="footer__texte__image"><i class="fas fa-utensils"></i></div>
-                <div class="footer__texte__texte"><p>Proposez un restaurant</p></div>
+                <div class="footer__texte__texte">
+                    <p>Proposez un restaurant</p>
+                </div>
             </div>
             <div class="footer__texte">
                 <div class="footer__texte__image footer__texte__image__2"><i class="fas fa-hands-helping"></i></div>
-                <div class="footer__texte__texte"><p>Devenir partenaire</p></div>
+                <div class="footer__texte__texte">
+                    <p>Devenir partenaire</p>
+                </div>
             </div>
-            <div class="footer__texte__texte"><p>Mention légales</p></div>
-            <div class="footer__texte__texte"><p>Contact</p></div>
+            <div class="footer__texte__texte">
+                <p>Mention légales</p>
+            </div>
+            <div class="footer__texte__texte">
+                <p>Contact</p>
+            </div>
 
         </div>
 
@@ -132,4 +209,5 @@
 
 
 </body>
+
 </html>
