--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="information__localisation">
                     <div class="information__localisation__image"><i class="fas fa-map-marker-alt"></i></div>
                     <div class="information__localisation__titre">
-                        <p>Paris, Belleville</p>
+                        <h3>Paris, Belleville</h3>
                     </div>
                 </div>
                 <div class="information__reservation">
@@ -36,7 +36,7 @@
                     <div class="information__reservation__texte">
                         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                     </div>
-                    <button class="information__reservation__bouton"><p>Explorez nos restaurants</p></button>
+                    <button class="information__reservation__bouton">Explorez nos restaurants</button>
                 </div>
             </div>
 
@@ -72,95 +72,94 @@
             <div class="restaurant">
                 <div class="restaurant__titre">Restaurants</div>
 
-                <a href="la_palette_du_gout.html">
-                    <div class="restaurant__card">
-                        <div id="imageRestaurant1" class="restaurant__card__image">
-                            <div class="restaurant__card__image__status">Nouveau</div>
-                        </div>
-                        <div class="restaurant__card__description">
-                            <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre">
-                                    <p>La palette du goût</p>
-                                </div>
-                                <div class="restaurant__card__description__texte__localisation">
-                                    <p>Ménilmontant</p>
-                                </div>
+                <a href="la_palette_du_gout.html" class="restaurant__card">
 
-
+                    <div id="imageRestaurant1" class="restaurant__card__image">
+                        <div class="restaurant__card__image__status">Nouveau</div>
+                    </div>
+                    <div class="restaurant__card__description">
+                        <div class="restaurant__card__description__texte">
+                            <div class="restaurant__card__description__texte__titre">
+                                <p>La palette du goût</p>
+                            </div>
+                            <div class="restaurant__card__description__texte__localisation">
+                                <p>Ménilmontant</p>
                             </div>
 
-                            <div class="restaurant__card__description__logo">
-                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
-                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
-                            </div>
+
                         </div>
+
+                        <div class="restaurant__card__description__logo">
+                            <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                            <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                        </div>
+                    </div>
 
                 </a>
-                </div>
 
-                <a href="la_note_enchantee.html">
-                    <div class="restaurant__card">
-                        <div id="imageRestaurant2" class="restaurant__card__image">
-                            <div class="restaurant__card__image__status">Nouveau</div>
-                        </div>
-                        <div class="restaurant__card__description">
-                            <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre">
-                                    <p>La note enchantée</p>
-                                </div>
-                                <div class="restaurant__card__description__texte__localisation">
-                                    <p>Charonne</p>
-                                </div>
-                            </div>
-                            <div class="restaurant__card__description__logo">
-                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
-                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
-                            </div>
 
-                        </div>
-                </a>
-                </div>
-                <a href="a_la_francaise.html">
-                    <div class="restaurant__card">
-                        <div id="imageRestaurant3" class="restaurant__card__image">
-                        </div>
-                        <div class="restaurant__card__description">
-                            <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre">
-                                    <p>A la française</p>
-                                </div>
-                                <div class="restaurant__card__description__texte__localisation">
-                                    <p>Cité Rouge</p>
-                                </div>
-                            </div>
-                            <div class="restaurant__card__description__logo">
-                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
-                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
-                            </div>
-                        </div>
-                </a>
-                </div>
-                <a href="le_delice_des_sens.html">
-                    <div class="restaurant__card">
-                        <div id="imageRestaurant4" class="restaurant__card__image">
-                        </div>
-                        <div class="restaurant__card__description">
-                            <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre">
-                                    <p>Le délice des sens</p>
-                                </div>
-                                <div class="restaurant__card__description__texte__localisation">
-                                    <p>Folie-Méricourt</p>
-                                </div>
-                            </div>
-                            <div class="restaurant__card__description__logo">
-                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
-                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
-                            </div>
+                <a href="la_note_enchantee.html" class="restaurant__card">
 
+                    <div id="imageRestaurant2" class="restaurant__card__image">
+                        <div class="restaurant__card__image__status">Nouveau</div>
+                    </div>
+                    <div class="restaurant__card__description">
+                        <div class="restaurant__card__description__texte">
+                            <div class="restaurant__card__description__texte__titre">
+                                <p>La note enchantée</p>
+                            </div>
+                            <div class="restaurant__card__description__texte__localisation">
+                                <p>Charonne</p>
+                            </div>
                         </div>
+                        <div class="restaurant__card__description__logo">
+                            <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                            <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                        </div>
+
+                    </div>
                 </a>
-                </div>
+
+                <a href="a_la_francaise.html" class="restaurant__card">
+
+                    <div id="imageRestaurant3" class="restaurant__card__image">
+                    </div>
+                    <div class="restaurant__card__description">
+                        <div class="restaurant__card__description__texte">
+                            <div class="restaurant__card__description__texte__titre">
+                                <p>A la française</p>
+                            </div>
+                            <div class="restaurant__card__description__texte__localisation">
+                                <p>Cité Rouge</p>
+                            </div>
+                        </div>
+                        <div class="restaurant__card__description__logo">
+                            <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                            <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="le_delice_des_sens.html" class="restaurant__card">
+
+                    <div id="imageRestaurant4" class="restaurant__card__image">
+                    </div>
+                    <div class="restaurant__card__description">
+                        <div class="restaurant__card__description__texte">
+                            <div class="restaurant__card__description__texte__titre">
+                                <p>Le délice des sens</p>
+                            </div>
+                            <div class="restaurant__card__description__texte__localisation">
+                                <p>Folie-Méricourt</p>
+                            </div>
+                        </div>
+                        <div class="restaurant__card__description__logo">
+                            <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                            <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                        </div>
+
+                    </div>
+                </a>
             </div>
         </div>
     </section>
@@ -193,7 +192,7 @@
     </footer>
 
 
-    </section>
+
 </body>
 
 </html>
