--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,119 +13,195 @@
     <link rel="stylesheet" href="public/css/style.css">
     <title>Projet 3</title>
 </head>
+
 <body>
     <header>
         <a class="retour" href="index.html"><i class="fas fa-arrow-left"></i></a>
         <div id="header__logo"></div>
     </header>
     <section>
-            <div id="imageRestaurant4"></div>
-            <div class="menu">
-                <div class="menu__top">
-                    <div class="menu__top__titre">Le délice des sens</div>
-                    <div class="menu__top__image"><div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div></div>
+        <div id="imageRestaurant4"></div>
+        <div class="menu">
+            <div class="menu__top">
+                <div class="menu__top__titre">
+                    <h2>Le délice des sens</h2>
                 </div>
-                <div class="menu__card"> 
-                    <div class="menu__card__titre"><p>Entrées</p></div>
-                    <div id="card-1" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Tartare de thon</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Assaisonné au yuzu</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>25€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-2" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Bouchée de homard croustillant </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et sa farandole de petits légumes</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-3" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Velouté de cèpes </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Aux truffes</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>20€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                <div class="menu__top__image">
+                    <div class="restaurant__card__description__logo">
+                        <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                        <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
                     </div>
                 </div>
-                <div  class="menu__card"> 
-                    <div class="menu__card__titre"><p>Plats</p></div>
-                    <div id="card-4" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Poulet rôti aux herbes de Provence</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et sa crème de truffe</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>40€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-5" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Langouste rôtie </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et ses légumes de saison</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-6" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Côte de boeuf Angus</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et sa purée de panais</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>44€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                </div>
-                <div  class="menu__card"> 
-                    <div class="menu__card__titre"><p>Desserts</p></div>
-                    <div id="card-7" class="menu__card__plat">
-                        <div  class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Farandole de desserts</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Du chef</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>18€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-8" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Crème brulée </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Revisité</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>22€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-9" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Tiramisu</p></div>
-                            <div class="menu__card__plat__texte__description"><p>À la noisette</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>23€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    
-                </div>
-                <div class="menu__bottom">
-                    <button class="menu__bottom__bouton"><p>Commander</p></button>
-                </div>
-                
             </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Entrées</p>
+                </div>
+                <div id="card-1" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Tartare de thon</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>25€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-2" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Bouchée de homard croustillant </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-3" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Velouté de cèpes </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Aux truffes</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>20€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Plats</p>
+                </div>
+                <div id="card-4" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Poulet rôti aux herbes de Provence</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-5" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Langouste rôtie </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-6" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Côte de boeuf Angus</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et sa purée de panais</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>44€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Desserts</p>
+                </div>
+                <div id="card-7" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Farandole de desserts</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Du chef</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>18€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-8" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Crème brulée </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Revisité</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>22€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-9" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Tiramisu</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>À la noisette</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>23€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+
+            </div>
+            <div class="menu__bottom">
+                <button class="menu__bottom__bouton">Commander</button>
+            </div>
+
+        </div>
     </section>
     <footer>
         <div class="footer">
             <div class="footer__logo"></div>
             <div class="footer__texte">
                 <div class="footer__texte__image"><i class="fas fa-utensils"></i></div>
-                <div class="footer__texte__texte"><p>Proposez un restaurant</p></div>
+                <div class="footer__texte__texte">
+                    <p>Proposez un restaurant</p>
+                </div>
             </div>
             <div class="footer__texte">
                 <div class="footer__texte__image footer__texte__image__2"><i class="fas fa-hands-helping"></i></div>
-                <div class="footer__texte__texte"><p>Devenir partenaire</p></div>
+                <div class="footer__texte__texte">
+                    <p>Devenir partenaire</p>
+                </div>
             </div>
-            <div class="footer__texte__texte"><p>Mention légales</p></div>
-            <div class="footer__texte__texte"><p>Contact</p></div>
+            <div class="footer__texte__texte">
+                <p>Mention légales</p>
+            </div>
+            <div class="footer__texte__texte">
+                <p>Contact</p>
+            </div>
 
         </div>
 
@@ -132,4 +209,5 @@
 
 
 </body>
+
 </html>
