--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,127 +13,209 @@
     <link rel="stylesheet" href="public/css/style.css">
     <title>Projet 3</title>
 </head>
+
 <body>
     <header>
         <a class="retour" href="index.html"><i class="fas fa-arrow-left"></i></a>
         <div id="header__logo"></div>
     </header>
     <section>
-            <div id="imageRestaurant3"></div>
-            <div class="menu">
-                <div class="menu__top">
-                    <div class="menu__top__titre">La note enchantée</div>
-                    <div class="menu__top__image"><div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div></div>
+        <div id="imageRestaurant3"></div>
+        <div class="menu">
+            <div class="menu__top">
+                <div class="menu__top__titre">
+                    <h2>La note enchantée</h2>
                 </div>
-                <div class="menu__card"> 
-                    <div class="menu__card__titre"><p>Entrées</p></div>
-                    <div id="card-1" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Ravioles de foie gras </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Accompagnés de leur crème à la truffe</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>25€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-2" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Caviar osciètre </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Sur blini à la farine de blé noir</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-3" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Homard et espuma de potiron</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Mariné aux zestes d'orange</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>20€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-4" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Foie gras de canard cuit entier</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Confiture de figue et pain toasté</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                <div class="menu__top__image">
+                    <div class="restaurant__card__description__logo">
+                        <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                        <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
                     </div>
                 </div>
-                <div  class="menu__card"> 
-                    <div class="menu__card__titre"><p>Plats</p></div>
-                    <div id="card-5" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Noix de coquilles Saint-Jacques</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Sur lit de purée de céleri-rave</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>40€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-6" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Langoustine poêlée</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Purée de patate douce</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>35€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-7" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Mijoté de queue de boeuf</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Et riz sauvage aux zestes de citron</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>44€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                </div>
-                <div  class="menu__card"> 
-                    <div class="menu__card__titre"><p>Desserts</p></div>
-                    <div id="card-8" class="menu__card__plat">
-                        <div  class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Macaron noisette et chocolat</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Glace au caramel brun et sel de Guérande</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>18€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-9" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Baba au rhum revisité </p></div>
-                            <div class="menu__card__plat__texte__description"><p>Avec son coulis de citron</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>22€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    <div id="card-10" class="menu__card__plat">
-                        <div class="menu__card__plat__texte">
-                            <div class="menu__card__plat__texte__titre"><p>Tarte au citron meringuée</p></div>
-                            <div class="menu__card__plat__texte__description"><p>Déstructurée</p></div>
-                        </div>
-                        <div class="menu__card__plat__prix"><p>23€</p></div>
-                        <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
-                    </div>
-                    
-                </div>
-                <div class="menu__bottom">
-                    <button class="menu__bottom__bouton"><p>Commander</p></button>
-                </div>
-                
             </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Entrées</p>
+                </div>
+                <div id="card-1" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Ravioles de foie gras </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>25€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-2" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Caviar osciètre </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-3" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Homard et espuma de potiron</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Mariné aux zestes d'orange</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>20€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-4" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Foie gras de canard cuit entier</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Plats</p>
+                </div>
+                <div id="card-5" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Noix de coquilles Saint-Jacques</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-6" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Langoustine poêlée</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Purée de patate douce</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-7" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Mijoté de queue de boeuf</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>44€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+            </div>
+            <div class="menu__card">
+                <div class="menu__card__titre">
+                    <p>Desserts</p>
+                </div>
+                <div id="card-8" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Macaron noisette et chocolat</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>18€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-9" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Baba au rhum revisité </p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>22€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+                <div id="card-10" class="menu__card__plat">
+                    <div class="menu__card__plat__texte">
+                        <div class="menu__card__plat__texte__titre">
+                            <p>Tarte au citron meringuée</p>
+                        </div>
+                        <div class="menu__card__plat__texte__description">
+                            <p>Déstructurée</p>
+                        </div>
+                    </div>
+                    <div class="menu__card__plat__prix">
+                        <p>23€</p>
+                    </div>
+                    <div class="menu__card__plat__valider"><i class="menu__card__plat__valider__check fas fa-check-circle"></i></div>
+                </div>
+
+            </div>
+            <div class="menu__bottom">
+                <button class="menu__bottom__bouton">Commander</button>
+            </div>
+
+        </div>
     </section>
     <footer>
         <div class="footer">
             <div class="footer__logo"></div>
             <div class="footer__texte">
                 <div class="footer__texte__image"><i class="fas fa-utensils"></i></div>
-                <div class="footer__texte__texte"><p>Proposez un restaurant</p></div>
+                <div class="footer__texte__texte">
+                    <p>Proposez un restaurant</p>
+                </div>
             </div>
             <div class="footer__texte">
                 <div class="footer__texte__image footer__texte__image__2"><i class="fas fa-hands-helping"></i></div>
-                <div class="footer__texte__texte"><p>Devenir partenaire</p></div>
+                <div class="footer__texte__texte">
+                    <p>Devenir partenaire</p>
+                </div>
             </div>
-            <div class="footer__texte__texte"><p>Mention légales</p></div>
-            <div class="footer__texte__texte"><p>Contact</p></div>
+            <div class="footer__texte__texte">
+                <p>Mention légales</p>
+            </div>
+            <div class="footer__texte__texte">
+                <p>Contact</p>
+            </div>
 
         </div>
 
@@ -140,4 +223,5 @@
 
 
 </body>
+
 </html>
