--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5bd336f818.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Projet 3</title>
@@ -26,7 +28,7 @@
                 <div class="information__localisation">
                     <div class="information__localisation__image"><i class="fas fa-map-marker-alt"></i></div>
                     <div class="information__localisation__titre">
-                        <h3>Paris, Belleville</h3>
+                        <p>Paris, Belleville</p>
                     </div>
                 </div>
                 <div class="information__reservation">
