--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <header>
         <div id="header__logo__home"></div>
     </header>
-    <section>
+    <main>
         <div class="loader">
             <div class="loader__mini"></div>
         </div>
         <div id="content-home">
-
 
             <div class="information">
                 <div class="information__localisation">
@@ -38,14 +37,14 @@
                     <div class="information__reservation__texte">
                         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                     </div>
-                    <button class="information__reservation__bouton">Explorez nos restaurants</button>
+                    <button class="information__reservation__bouton">Explorer nos restaurants</button>
                 </div>
             </div>
 
             <div class="fonctionnement">
-                <div class="fonctionnement__titre">
-                    <p>Fonctionnement</p>
-                </div>
+                <h3 class="fonctionnement__titre">
+                    Fonctionnement
+                </h3>
                 <div class="fonctionnement__bouton">
                     <div class="fonctionnement__bouton__number">1</div>
                     <div class="fonctionnement__bouton__image"><i class="fas fa-mobile-alt"></i></div>
@@ -72,7 +71,7 @@
             </div>
             <!-- TODO AJOUTER SECTION -->
             <div class="restaurant">
-                <div class="restaurant__titre">Restaurants</div>
+                <h3 class="restaurant__titre">Restaurants</h3>
 
                 <a href="la_palette_du_gout.html" class="restaurant__card">
 
@@ -164,7 +163,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </main>
     <footer>
         <div class="footer">
             <div class="footer__logo"></div>
@@ -184,7 +183,7 @@
                 <p>Mention légales</p>
             </div>
             <div class="footer__texte__texte">
-                <a href="mailto:EMAILADDRESS">
+                <a href="mailto:contact@ohmyfood.com">
                     <p>Contact</p>
                 </a>
             </div>
